# course2_pyFastAPI

./: .env-example  Makefile  README.md  docker-compose.yaml
.github/workflows/: linters.yaml
backend_api/: Dockerfile  pyproject.toml
backend_api/app/: Makefile  app_factory.py
backend_api/app/applications/auth/: auth_handler.py  password_handler.py  router.py  security.py
backend_api/app/applications/products/: crud.py  models.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  router.py  schemas.py
backend_api/app/database/: session_dependencies.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_05_02_1807-d9047a43356d_add_users_table.py  2025_06_06_1710-51a29e6ae3af_add_user_verification_and_admin_fields.py  2025_06_10_1714-a86d979e0f82_admin.py  2025_06_17_1701-330d5cb96e07_add_product.py  2025_07_01_1647-57c9c85b5825_cart.py
backend_api/app/services/s3/: s3.py
documentation/: mkdocs.yml
documentation/docs/: index.md  tasks.md
frontend/: Dockerfile  pyproject.toml
frontend/app/: settings.py
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/templates/: index.html  login.html  product_detail.html
frontend/app/templates/components/: base.html  login_comp.html  navbar.html  products.html
nginx/: nginx.conf
notification_service/: Dockerfile  pyproject.toml
notification_service/app/: main.py
notification_service/app/services/rabbit/: handlers.py
